# GPP

./: .gitignore  CMakeLists.txt
gpp/: CMakeLists.txt  Makefile
gpp/src/: CMakeLists.txt  Makefile  gpp  main.cpp
libgpp/: CMakeLists.txt  Makefile
libgpp/include/: Exception.hpp  Fitness.hpp
libgpp/src/: CMakeLists.txt  Exception.cpp  Individual.hpp  Makefile  libgpp.cpp
libgpp/tests/: Exception.cpp
